sand-macros/tests/cases/fail_sand_event_after_any_empty.rs
use sand_core::events::SandEventDispatch;

fn main() {
    let _ = SandEventDispatch::after_any::<()>();
}
